--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,8 @@
     background-image: linear-gradient(transparent, transparent), linear-gradient(#868e96, #868e96);
   }
 }
+
+
+body {
+	overflow-x: hidden;
+}
